objects/Configurator_Plus_IP_Merge_Kit__c.object
<CustomObject>
    <fields>
        <fullName>Basic_check_item_a__c</fullName>
        <defaultValue>&quot; Please make sure the device follows GLOBALFOUNDRIES standard layer difinition&quot;</defaultValue>
        <label>Basic check item	 a</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic_check_item_b__c</fullName>
        <defaultValue>&quot; Please make sure the DRC check is peroformed with IP Phantom emdedded and clean up all DRC Violations around the IP, except for the waivers described in its IP Phantom Release Notes&quot;</defaultValue>
        <label>Basic check item	 b</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Basic_check_item_c__c</fullName>
        <defaultValue>&quot;Please make sure IP Phantom (s) are included in Customer&apos;s database&quot;</defaultValue>
        <label>Basic check item	 c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Basic_check_item_d__c</fullName>
        <defaultValue>&quot;Pl. make sure the Top Cell name(s) of Phantom (Lib Name_PA) are kept same as in the released design kit&quot;</defaultValue>
        <label>Basic check item	 d</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Basic_check_item_e__c</fullName>
        <defaultValue>&quot;Please make sure hierarchy of Phantom Cell is kept the same as in the released design kit.&quot;</defaultValue>
        <label>Basic check item	 e</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Basic_check_item_f__c</fullName>
        <defaultValue>&quot;Pl. make sure IP Alignment Marker  (GDS #41, data type 207 e.g) exist in the database for IP alignment&quot;</defaultValue>
        <label>Basic check item	 f</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_name__c</fullName>
        <label>Company name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configurator_Plus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configurator Plus</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipName>Configurator_Plus_IP_Merge_Kits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_person__c</fullName>
        <label>Contact person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Engineer_Contact_Person__c</fullName>
        <label>Customer Engineer Contact Person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Engineer_Email__c</fullName>
        <label>Customer Engineer Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Product_GDS_Top_Cell_name__c</fullName>
        <label>Customer Product GDS Top Cell name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Product_Name_Device_ID__c</fullName>
        <label>Customer Product Name /Device ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Voltage__c</fullName>
        <label>Device Voltage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipName>Configurator_Plus_IP_Merge_Kits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_mail_Address__c</fullName>
        <label>E-mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Environment_for_Design_Verification__c</fullName>
        <label>Environment for Design Verification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_number__c</fullName>
        <label>Fax number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field_Engineer_Contact_Person__c</fullName>
        <label>Field Engineer Contact Person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Engineer_Email_Address__c</fullName>
        <label>Field Engineer Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IP_Merge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IP Merge</label>
        <referenceTo>IP_Merge__c</referenceTo>
        <relationshipName>Configurator_Plus_IP_Merge_Kits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IP_Product_Name__c</fullName>
        <label>IP Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Provider__c</fullName>
        <label>IP Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Top_Cell_Name__c</fullName>
        <label>IP Top Cell Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Version__c</fullName>
        <label>IP Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Notes_Point_1__c</fullName>
        <defaultValue>&quot;Customer hereby undertakes and confirms that the submission of this IP Merge Request Form shall be deemed the IP(s) mentioned in this form (including IP name and version) and specifications of such IP(s) have conformed to Customer&apos;s requirement&quot;</defaultValue>
        <label>Key Notes Point 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Notes_Point_2__c</fullName>
        <defaultValue>&quot;Customer need to issue this IP merge request form one month ahead of IP merge day. It takes 2 weeks for GlobalFoundries perform QA review, and it may takes another 10 working days to perform IP modification to meet the update rules.&quot;</defaultValue>
        <label>Key Notes	Point 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Notes_Point_3__c</fullName>
        <defaultValue>&quot;please note that the Phantom Marking Layers (Layer Name - PAMK_SST, GDS Layer No- 41, DataType -206) &amp; IP Marking Layer (Layer Name- GAMK_SST, GDS Layer No- 41, Data Type- 207)] are exist in respective GDS&quot;</defaultValue>
        <label>Key Notes	Point 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Origin_X_Y__c</fullName>
        <label>Location Origin (X,Y)</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Mask_Type__c</fullName>
        <label>Mask Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MPW Tape out</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phantom_Top_Cell_Name__c</fullName>
        <label>Phantom Top Cell Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <label>Phone number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <label>Process ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revision_of_DRC_runset__c</fullName>
        <label>Revision of DRC runset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_of_LVS_runset__c</fullName>
        <label>Revision of LVS runset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_date_of_request_form__c</fullName>
        <label>Sent date of request form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spec_of_DRC_runset__c</fullName>
        <label>Spec of DRC runset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spec_of_LVS_runset__c</fullName>
        <label>Spec of LVS runset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapeout_Type__c</fullName>
        <label>Tapeout Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Tapeout</fullName>
                </value>
                <value>
                    <fullName>Retrofit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_IP_Merge_day__c</fullName>
        <label>Target IP Merge day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>The_form_filled_in_by__c</fullName>
        <label>The form filled in by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_metal_layer__c</fullName>
        <label>Top metal layer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_metal_thickness__c</fullName>
        <label>Top metal thickness (Å)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_via_layer__c</fullName>
        <label>Top via layer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_via_size_um__c</fullName>
        <label>Top via size (um)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>IP Merge Request</label>
    <listViews>
        <fullName>IP_Merge_KIT_Design_Approval_Configurator_Plus_IP_Merge_Kit</fullName>
        <filterScope>Queue</filterScope>
        <label>IP Merge KIT Design Approval</label>
        <queue>IP_Merge_KIT_Design_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CPIPMK-{000000}</displayFormat>
        <label>IP Merge Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IP Merge Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_On_PT_Number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(CONTAINS(IP_Merge__r.PT_Number__c, TEXT(Configurator_Plus__r.Process_Technology__c)))</errorConditionFormula>
        <errorMessage>PT Number should be same for Configurator Plus and IP Merge records.</errorMessage>
    </validationRules>
</CustomObject>